force-app/main/default/objects/Session_Management__mdt/Session_Management__mdt.object-meta.xml
<CustomObject>
    <label>Session Management</label>
    <pluralLabel>Session Managements</pluralLabel>
</CustomObject>