force-app/main/default/objects/Session_Management__mdt/fields/Access_Key__c.field-meta.xml
<CustomField>
    <fullName>Access_Key__c</fullName>
    <label>Access Key</label>
    <type>TextArea</type>
</CustomField>