force-app/main/default/objects/Session_Management__mdt/fields/Secret_Access_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Access_Key__c</fullName>
    <label>Secret Access Key</label>
    <type>TextArea</type>
</CustomField>