force-app/main/default/objects/Session_Management__mdt/fields/Session_Token__c.field-meta.xml
<CustomField>
    <fullName>Session_Token__c</fullName>
    <label>Session Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>